# aia-software-training

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  aviation.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: check.yml
analysis/: passengers_per_day.py  plot_global_fleet.py  plot_passengers.py  required_global_fleet.py
api/: index.html
api/fleet/: index.html
api/units/: index.html
docs/: aviation.md  fleet.md  index.md
fleet/: index.html
search/: search_index.json
src/: __init__.py
src/aviation/: __init__.py  _engine.py  _model.py  aviation.py  fleet.py  units.py
src/avivation/: __init__.py
tests/: test_aviation.py  test_engine.py  test_model.py
