[project]
name = "aviation"
version = "0.1.0"
description = "A simple model of global aviation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pre-commit>=4.5.1", "pytest>=8.4.1", "ruff>=0.12.3"]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.1", "ruff>=0.12.3"]
docs = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-prebuild>=0.5.0",
    "mkdocstrings[python]>=0.29.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "N", "SIM", "T", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"analysis/*" = ["T201"]
"tests/*" = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
default-groups = ["dev", "docs"]

[[tool.uv.index]]
name = "gitlab"
url = "https://gitlab.developers.cam.ac.uk/api/v4/projects/8115/packages/pypi/simple"
publish-url = "https://gitlab.developers.cam.ac.uk/api/v4/projects/8115/packages/pypi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
